--- a/style.css
+++ b/style.css
@@ -1,53 +1,3 @@
-
-.titulo {
-  padding: 15px;
-  width: 30vw;
-  margin: auto;
-
-}
-
-.btn {
-  border: 0;
-  color: white;
-  font-weight: bold;
-  background-color: blue;
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border-radius: 0.5em;
-
-  /*En las siguientes dos lineas se indica la animación a usar y como operara*/  
-  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-}
-
-.text-input {
-  border-radius: 0.5em;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  display: block;
-  padding: 0.5em;
-  width: 30%;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.smit{
-  border: 0;
-  color: white;
-  font-weight: bold;
-  background-color: blue;
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border-radius: 0.5em;
-
-  /*En las siguientes dos lineas se indica la animación a usar y como operara*/  
-  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-            animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  
-}
-
 /* a continuación se encuentra la configuración de la animación scale-up-center utilizada en los botones*/
 @-webkit-keyframes scale-up-center {
   0% {
@@ -120,10 +70,11 @@
 
 .animacionClase{
   background:linear-gradient(to right, #005C98, #505BDA);
+  position: relative;
   overflow: hidden;
 }
 
-.canvas{
+#canvas{
   position: relative;
   width: 1000px;
   height: 500px;
@@ -154,14 +105,63 @@
 }
 
 .errores{
-  position: fixed;
-  float: left;
-  left: 10px;
-  top: 70px;
-  margin: 1px;
-  height: 60px;
-  width: 35px;
+  position:fixed;
+  display:block;
+  margin-left:30px;
+  margin-right: inherit;
+  margin-top: 45px;
+  margin-bottom: inherit;
 
+  border-radius: 2em;
+  border:3px outset rgba(13, 48, 206, 0.692);
+  padding: 0.5em;
+  width: 4%;
+  height: 15px;
+  font-size: xx-large;
+  font-style: italic;
+  font-family:'Times New Roman', Times, serif;
+  text-align: center;
+  align-items: center;
+}
+
+.errores2{
+  position:fixed;
+  display:block;
+  margin-left:30px;
+  margin-right: inherit;
+  margin-top: 110px;
+  margin-bottom: inherit;
+
+  border-radius: 2em;
+  border:3px outset rgba(13, 48, 206, 0.692);
+  padding: 0.5em;
+  width: 4%;
+  height: 15px;
+  font-size: xx-large;
+  font-style: italic;
+  font-family:'Times New Roman', Times, serif;
+  text-align: center;
+  align-items: center;
+}
+
+.errores3{
+  position:fixed;
+  display:block;
+  margin-left:30px;
+  margin-right: inherit;
+  margin-top: 175px;
+  margin-bottom: inherit;
+
+  border-radius: 2em;
+  border:3px outset rgba(13, 48, 206, 0.692);
+  padding: 0.5em;
+  width: 4%;
+  height: 15px;
+  font-size: xx-large;
+  font-style: italic;
+  font-family:'Times New Roman', Times, serif;
+  text-align: center;
+  align-items: center;
 }
 
 .campeon1{
@@ -271,6 +271,9 @@ img{
   0%{
     bottom: 0;
     opacity: 0;
+  }
+  30%{
+    transform: translateX(35px);
   }
 
   50%{
