first advance to github pages

--- a/styleindex.css
+++ b/styleindex.css
@@ -63,7 +63,7 @@
     margin-bottom: 10px;
     border-radius: 0.5em;
 
-    /*En las siguientes dos lineas se indica la animación a usar y como operara*/  
+    /*En las siguientes dos lineas se indica la animación a usar y como se operara*/  
     -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
