--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   margin-bottom: 10px;
   border-radius: 0.5em;
 
-  /*En las siguientes dos lineas se indica la animación sacale-up-center y como operara*/  
+  /*En las siguientes dos lineas se indica la animación sacale-up-center y como se operara*/  
   -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
             animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 
